package hu.elte.alkfejl.DormRooms.model;

public enum RoomState {
    AVAILABLE, NOT_AVAILABLE
}
