package hu.elte.alkfejl.DormRooms.model;

public enum RoomType {
    MALE, FEMALE, MIXED
}
